--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
 		"@babel/core": "^7.20.12",
 		"@babel/preset-env": "^7.20.2",
 		"jest": "^29.4.3"
+	},
+	"dependencies": {
+		"core-js": "^3.28.0"
 	}
 }
